Fix small input width overflow in `UnifiedSearch` when resized to the minimum size

--- a/styles/widgets/_unifiedSearch.scss
+++ b/styles/widgets/_unifiedSearch.scss
@@ -40,6 +40,7 @@ $searchButtonTotal: $searchButtonWidth + $searchButtonPadding * 2;
     display: block;
     margin: 0;
     padding: 6px #{12px + $searchButtonTotal} 6px 12px;
+    min-width: 0;
     color: theme.$input-color;
     background-color: theme.$background-color-surface;
     border: none;
